flasksite/static/NHLmain.css
body:before {
  content: '';
  position: fixed;
  width: 100%;
  height: 100%;
  background-image: url('../static/images/uqebOQJ_low_qual.jpg');
  background-position: center center;
  background-repeat: no-repeat;
  background-position: 100% 100%;
  background-size: cover;
  filter: blur(2px) brightness(0.5);
  z-index: -9;
  transform: scale(1.1);
  font-family: 'Roboto', sans-serif;
}

body {
  color: #CCCCCC;
  min-width: 320px;
}

* {
  box-sizing: border-box;
}

h1, h2, h3, h4, h5, h6 {
  color: #FFFFFF;
  font-weight: 100;
}

h1 {
  text-align: center;
  margin-top: 20px;
  margin-bottom: 20px;
  font-size: 3em;
}

h2 {
  text-align: center;
}

h2.todays-players-heading {
  font-size: 1.4em;
}

td {
  border: none;
  text-align: center; 
  vertical-align: middle;
  word-wrap: none;
  white-space: nowrap;
}

th {
  border: none;
  text-align: center; 
  vertical-align: middle;
  word-wrap: none;
  white-space: nowrap;
  border-right: #CCCCCC;
}

th:hover {
  text-transform: uppercase;
}

span {
  display: inline-block;
  vertical-align: middle;
  line-height: normal;
}

ul {
  padding: 0em;
}

.text-muted {
  font-size: .8em;
}

.stat-table th {
  background-color: transparent;
  color: #CCCCCC;
  font-weight: 300;
  border: none;
  text-align: center;
}

/* Make empty header cells (i.e., above the players' names) the same background as the body */
.stat-table th:empty {
  background: transparent;
  width: 200px;
  min-width: 200px;
  border: none;
}

tr {
  line-height: 10px;
}

tr:hover {
  background-color: rgba(248, 218, 86, 0.712);
}

hr {
  width: 80%;
  background-color: #CCCCCC;
}

#main-nav-bar {
  color: #FFFFFF;
  font-weight: 100;
  padding: 7px 14px;
  text-align: center;
  border-style: solid;
  border-radius: 2px;
  border-color: #cccccc;
  border-width: 2px;
  max-width: 80%;
}

#register-logout-button {
  color: #cccccc;
  border-radius: 2px;
  border-style: solid;
  border-color: #cccccc;
  border-width: 1px;
  margin-right: 0px;
}

#register-logout-button:hover {
  color: rgba(248, 218, 86, 0.712);
  border-color: rgba(248, 218, 86, 0.712);
}

#header-container {
  font-size: 7rem;
  margin: .8rem;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
}

#navbarToggle {
  padding-right: 0px;
  font-weight: 100;
  color: #CCCCCC;
  font-size: 1.5em;
}

#stamkos-tweets-title {
  padding: 1em 0em 0em 0em;
  margin: 0em;
}

#stamkos-subtitle {
  font-style: italic;
  margin-top: 20px;
  margin-bottom: 20px;
  font-size: 1.7em;
  font-weight: 100;
}

#KMP-disclaimer {
  color: #bebebe;
  font-size: 1em;
  font-style: italic;
  margin: 1.6em 0em;
}

#user_email {
  font-size: 95%;
  color: rgb(163, 163, 163);
  height: auto;
}

.home-credits {
  font-size: 2.7em;
}

.container {
  text-align: center;
  box-sizing: border-box;
  padding: 0% 2%;
}

.site-header .navbar-nav .nav-link {
  color: #CCCCCC;
  font-size: .17em;
  margin: 7px;
  align-items: center;
  display: flex;
  text-align: center;
  justify-content: center;
}

.site-header .navbar-nav .nav-link:hover {
  color: rgba(248, 218, 86, 0.712);
}

.site-header .navbar-nav .nav-link.active {
  font-weight: 500;
}

.site-header {
  width: auto;
  max-width: 100%;
  margin: 1em;
  padding: 0em;
}

.navbar {
  padding: 0rem 0rem 0rem 0rem;
  background: transparent;
  position: relative;
  top: 0%;
  width: 100%;
  z-index: 2;
}

.nav-item .nav-link {
  padding: 10px 10px;
}

.navbar-collapse {
  color: #CCCCCC;
  z-index: 2;
}

.stat-table {
  border: none;
  justify-items: center;
  color: #CCCCCC;
}

.stamkos-image {
  height: auto;
  width: 95%;
  opacity: 0.7;
  box-shadow: 0 0 8px 8px black inset;
}

.stamkos-div {  
  text-align: center;
  margin: 0px 0px 40px 0px;
}

.stamkos-name-div {
  background-color: rgba(255, 220, 62, 0.582);
  margin: 1.5em 30%;
  padding: 1em 0em;
  border-radius: 10px;
}

.bg-text {
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
  color: #CCCCCC;
  padding: 1em .25em;
  text-align: center;
  display: block;
  border-radius: 2px;
  width: auto;
}

.todays-players {
  width: 49.9%;
  line-height: 13.5em;
  text-align: center;
  font-size: 2.5em;
  color: #cccccc;
  display: table-cell;
  padding: .1em;
}

.vertical-line {
  width: 0.1%;
  min-width: 1px;
  display: table-cell;
  background-color:#CCCCCC;
  height: 100%;
}

.player-wrapper {
  display: table;
  width: 100%;
  height: 5em;
  text-align: center;
  margin-bottom: 10px;
  margin-top: 10px;
}

.player-hr {
  margin: 2.5em 12.5%;
  width: 75%;
  align-self: center;
}

.form-control {
  width: 20rem;
  max-width: 95%;
  align-content: center;
  display: inline-block;
  background-color: transparent;
  border-width: 1px;
  border-color: #FFFFFF;
  color: #FFFFFF;
  font-weight: 100;
}

.form-control-label {
  font-size: 1.35rem;
  font-weight: 100;
}

.picture-upload-box {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.form-control-file {
  display: inline-block;
  font-weight: 100;
  font-size: 1rem;
  flex-direction: column;
}

.centered-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  width: 20rem;
}

.choose-file-button {
  border-width: 1px;
  border-radius: .3rem;
  border-color: #FFFFFF;
  border-style: solid;
  max-width: 95%;
}

.media {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  height: 7em;
}

.media-body {
  flex: 0;
}

.spanning-flex-box {
  height: 125px;
}

.rounded-circle.account-img {
  height: 90%;
  max-width: 125px;
  min-width: 75px;
}

.ml-2 {
  color: rgba(248, 218, 86, 0.712);
}

.btn.btn-outline-info {
  color: rgba(248, 218, 86, 0.712);
  border-color: rgba(248, 218, 86, 0.712);
}

.technology-list {
  list-style: none;
  font-size: 2em;
  font-weight: 100;
}

.btn.btn-outline-info {
  background-color: transparent;
  border-width: 1px;
  border-color: rgba(248, 218, 86, 0.712);
  border-radius: 2px;
}

.todays-player-text {
  font-size: 1em;
}

.tweet-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-content: space-between;
}

.tweet-box {
  color: #cccccc;
  border-radius: 10px;
  border-width: 1px;
  border-style: solid;
  border-color: #cccccc;
  height: auto;
  display: flex;
  justify-content: space-around;
  text-align: center;
  width: 40em;
  border-spacing: 4px;
  align-items: center;
  margin: 10px 5px;
}

.tweet-user-box {
  font-weight: 200;
  width: 45%;
  display: flex;
  padding: 7px 15px;
  justify-content: center;
  flex-direction: column;
}

.tweet-text-box {
  padding: 10px;
  margin: 12px 0px;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 80%;
  border-left: 1px solid #FFFFFF;
}

.tweet-username {
  font-size: 1.2rem;
  display: flex;
}

.tweet-date {
  font: 0.45em;
  display: flex;
}

.tweet-text {
  font-size: .6em;
  display: flex;
  font-weight: 200;
  align-items: center;
}

.tweet-text {
  font-size: 1em;
}

.account-container {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-around;
  align-content: space-between;
}

.footer {
  position: relative;
  bottom: 0;
  width: 100%;
  height: 80px;
  background-color: transparent;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1em 0em;
  flex-direction: column;
}

legend.border-bottom.mb-4 {
  padding-bottom: .5rem;
  font-size: 2rem;
  font-weight: 200;
}

::-webkit-scrollbar-track {
	border: 1px solid black;
	background-color: #333333;
}

::-webkit-scrollbar {
  height: 8px;
  width: 8px;
	background-color: rgba(248, 218, 86, 0.712);
}

::-webkit-scrollbar-thumb {
	background-color: rgba(248, 218, 86, 0.712);	
}

strong {
  font-size: 1.3em;
  color: rgba(248, 218, 86, 0.712);
}

@media screen and (min-width: 1200px) and (max-width: 1268px) {
  #main-nav-bar {
    font-size: .9em;
  }
}

@media screen and (min-width: 683px) {
  #main-nav-bar {
    font-size: .4em;
  }

  h1, strong {
    font-size: 45px;
  }
}

@media screen and (min-width: 531px) and (max-width: 682px) {
  #main-nav-bar {
    font-size: .4em;
  }

  h1, strong {
    font-size: 45px;
  }

  .todays-player-text {
    font-size: 30px;
  }
}

@media screen  and (min-width: 450px) and (max-width: 530px) {
  #main-nav-bar {
    font-size: .3em;
  }

  h1, strong {
    font-size: 40px;
  }

  .todays-player-text {
    font-size: 27px;
  }

  .tweet-username {
    font-size: 1.1rem;
  }
}

@media screen  and (min-width: 357px) and (max-width: 449px) {
  #main-nav-bar {
    font-size: .2em;
  }

  h1, strong {
    font-size: 33px;
  }

  .todays-player-text {
    font-size: 20px;
  }

  .tweet-username {
    font-size: 1.0rem;
  }
}

@media screen  and (min-width: 325px) and (max-width: 356px) {
  #main-nav-bar {
    font-size: .13em;
  }

  h1, strong {
    font-size: 22px;
  }

  .todays-player-text {
    font-size: 19px;
  }
}

@media screen  and (min-width: 0px) and (max-width: 324px) {
  #main-nav-bar {
    font-size: .13em;
  }

  h1, strong {
    font-size: 29px;
  }

  .todays-player-text {
    font-size: 18px;
  }
}

